# pocketVox

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  cscope.out  libtool  pocketvox.geany  pocketvox.pc  pocketvox.pc.in  setup.sh
autom4te.cache/: output.0  output.1  output.2  output.5  requests  traces.0  traces.1  traces.10  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
data/: Makefile  Makefile.am  Makefile.in  pocketvox-gtk.desktop  pocketvox-gtk.desktop.in  pocketvox-launcher.sh  pocketvox-launcher.sh.in  pocketvox.desktop
debian/: changelog  control  copyright  postrm  rules
debian/source/: lintian-overrides
docs/: Makefile  Makefile.in
docs/reference/: Makefile  Makefile.am  Makefile.in  pocketvox-decl-list.txt  pocketvox-decl.txt  pocketvox-docs.xml  pocketvox-sections.txt  pocketvox-undocumented.txt  pocketvox-unused.txt  pocketvox.args  pocketvox.hierarchy  pocketvox.signals  pocketvox.types
docs/reference/.libs/: lt-pocketvox-scan  pocketvox-scan
docs/reference/html/: PocketvoxApplication.html  PocketvoxController.html  PocketvoxDictionnary.html  PocketvoxIndicator.html  PocketvoxModule.html  PocketvoxNotifier.html  PocketvoxRecognizer.html  PocketvoxXmanager.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  object-tree.html  pocketvox-pocketvox-types.html  pocketvox.devhelp2
docs/reference/xml/: api-index-full.xml  object_index.sgml  pocketvox-application.xml  pocketvox-controller.xml  pocketvox-dictionnary.xml  pocketvox-doc.bottom  pocketvox-indicator.xml  pocketvox-module.xml  pocketvox-notifier.xml  pocketvox-recognizer.xml  pocketvox-types.xml  pocketvox-xmanager.xml  tree_index.sgml
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  Pocketvox.pot  es.gmo  es.po  fr.gmo  fr.po  missing  pocketvox.pot
src/: .pocketvox-recognizer.c.swo  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Pocketvox.gir  Pocketvox.typelib  Pocketvox_gir  cscope.out  main.c  pocketvox-application.c  pocketvox-application.h  pocketvox-chooser.c  pocketvox-chooser.h  pocketvox-controller.c  pocketvox-controller.h  pocketvox-dictionnary.c  pocketvox-dictionnary.h  pocketvox-indicator.c  pocketvox-indicator.h  pocketvox-module.c  pocketvox-module.h  pocketvox-notifier.c  pocketvox-notifier.h  pocketvox-profile.c  pocketvox-profile.h  pocketvox-recognizer.c  pocketvox-recognizer.h  pocketvox-types.h  pocketvox-xmanager.c  pocketvox_controller.c  pocketvox_controller.h  pocketvox_dictionnary.c  pocketvox_indicator.c  pocketvox_indicator.h  pocketvox_module.c  pocketvox_module.h  pocketvox_notifier.c  pocketvox_recognizer.c  pocketvox_recognizer.h  (+1 more)
src/.deps/: pocketvox-application.Plo  pocketvox-chooser.Plo  pocketvox-controller.Plo  pocketvox-indicator.Plo  pocketvox-main.Po  pocketvox-module.Plo  pocketvox-notifier.Plo  pocketvox-profile.Plo  pocketvox-setup.Plo  pocketvox-xmanager.Plo  pocketvox_dictionnary.Plo  pocketvox_indicator.Plo  pocketvox_notifier.Plo  pocketvox_recognizer.Plo
src/Dictionnary/: CMakeLists.txt  pocketvox_dictionnary.c  pocketvox_dictionnary.h
src/Indicator/: CMakeLists.txt  pocketvox_indicator.c
src/Notifier/: CMakeLists.txt  pocketvox_notifier.c  pocketvox_notifier.h
src/Recognizer/: CMakeLists.txt
src/gui/: Makefile  Makefile.am  Makefile.in  main.c  org.pocketvox.gschema.xml  pocketvox-gtk  pocketvox-setup.c  pocketvox-setup.h
src/gui/.deps/: pocketvox_gtk-main.Po  pocketvox_gtk-pocketvox-chooser.Po  pocketvox_gtk-pocketvox-setup.Po
src/gui/.libs/: pocketvox-gtk
src/lib/: Makefile  Makefile.am  Makefile.in  Pocketvox-1.0.gir  Pocketvox-1.0.typelib  Pocketvox_1_0_gir  libpocketvox-1.0.la  main.c  pocketvox  pocketvox-application.c  pocketvox-application.h  pocketvox-application.lo  pocketvox-chooser.c  pocketvox-controller.c  pocketvox-controller.h  pocketvox-controller.lo  pocketvox-dictionnary.c  pocketvox-dictionnary.h  pocketvox-dictionnary.lo  pocketvox-indicator.c  pocketvox-indicator.h  pocketvox-indicator.lo  pocketvox-module.c  pocketvox-module.h  pocketvox-module.lo  pocketvox-notifier.c  pocketvox-notifier.h  pocketvox-notifier.lo  pocketvox-profile.c  pocketvox-profile.h  pocketvox-recognizer.c  pocketvox-recognizer.h  pocketvox-recognizer.lo  pocketvox-types.h  pocketvox-xmanager.h  pocketvox-xmanager.lo
src/lib/.deps/: pocketvox-application.Plo  pocketvox-chooser.Plo  pocketvox-controller.Plo  pocketvox-dictionnary.Plo  pocketvox-indicator.Plo  pocketvox-main.Po  pocketvox-module.Plo  pocketvox-notifier.Plo  pocketvox-profile.Plo  pocketvox-recognizer.Plo  pocketvox-xmanager.Plo
src/lib/.libs/: libpocketvox-1.0.la  libpocketvox-1.0.lai  libpocketvox-1.0.so.0.0.0  pocketvox
utils/: LMBuilder.sh  RAWBuilder.sh  model_compiler.py  translation.sh
